@@ -13,37 +13,37 @@ import java.util.stream.Collectors;
 @Transactional
 public class DashboardService {
 
-  private final PersonRepository personRepository;
-  private final TodoRepository todoRepository;
+    private final PersonRepository personRepository;
+    private final TodoRepository todoRepository;
 
-  public DashboardService(PersonRepository personRepository, TodoRepository todoRepository) {
-    this.personRepository = personRepository;
-    this.todoRepository = todoRepository;
-  }
+    public DashboardService(PersonRepository personRepository, TodoRepository todoRepository) {
+        this.personRepository = personRepository;
+        this.todoRepository = todoRepository;
+    }
 
-  public List<CollaboratorDto> getAvailableCollaborators(String email) {
-   List<Person> collaborators = personRepository.findByEmailNot(email);
+    public List<CollaboratorDto> getAvailableCollaborators(String email) {
+        List<Person> collaborators = personRepository.findByEmailNot(email);
 
-   return collaborators
-     .stream()
-     .map(person -> new CollaboratorDto(person.getId(), person.getName()))
-     .collect(Collectors.toList());
-  }
+        return collaborators
+                .stream()
+                .map(person -> new CollaboratorDto(person.getId(), person.getName()))
+                .collect(Collectors.toList());
+    }
 
-  public List<TodoDto> getAllOwnedAndSharedTodos(String email) {
+    public List<TodoDto> getAllOwnedAndSharedTodos(String email) {
 
-    List<TodoDto> ownedTodos = todoRepository.findAllByOwnerEmailOrderByIdAsc(email)
-      .stream()
-      .map(todo -> new TodoDto(todo, false))
-      .collect(Collectors.toList());
+        List<TodoDto> ownedTodos = todoRepository.findAllByOwnerEmailOrderByIdAsc(email)
+                .stream()
+                .map(todo -> new TodoDto(todo, false))
+                .collect(Collectors.toList());
 
-    List<TodoDto> collaborativeTodos = todoRepository.findAllByCollaboratorsEmailOrderByIdAsc(email)
-      .stream()
-      .map(todo -> new TodoDto(todo, true))
-      .collect(Collectors.toList());
+        List<TodoDto> collaborativeTodos = todoRepository.findAllByCollaboratorsEmailOrderByIdAsc(email)
+                .stream()
+                .map(todo -> new TodoDto(todo, true))
+                .toList();
 
-    ownedTodos.addAll(collaborativeTodos);
+        ownedTodos.addAll(collaborativeTodos);
 
-    return ownedTodos;
-  }
+        return ownedTodos;
+    }
 }
